--- a/02.HTMLのタグについて学ぼう/index.html
+++ b/02.HTMLのタグについて学ぼう/index.html
@@ -5,6 +5,6 @@
 <!-- 👇下の文字をh3で挟んでください -->
 <h3>3番目に大きい文字</h3>
 <!-- 👇下の文字をh4で挟んでください -->
-<h4>番目に大きい文字</h4>4
+<h4>番目に大きい文字4</h4>
 <!-- 👇下の文字をh5で挟んでください -->
 <h5>5番目に大きい文字</h5>
